syntax = "proto3";

package repeateds;

message RepeatedsMessage {
  repeated int32 repeated_int32 = 1;
  repeated int64 repeated_int64 = 2;
  repeated uint32 repeated_uint32 = 3;
  repeated uint64 repeated_uint64 = 4;
  repeated sint32 repeated_sint32 = 5;
  repeated sint64 repeated_sint64 = 6;
  repeated fixed32 repeated_fixed32 = 7;
  repeated fixed64 repeated_fixed64 = 8;
  repeated sfixed32 repeated_sfixed32 = 9;
  repeated sfixed64 repeated_sfixed64 = 10;
  repeated float repeated_float = 11;
  repeated double repeated_double = 12;
  repeated bool repeated_bool = 13;
  repeated string repeated_string = 14;
  repeated bytes repeated_bytes = 15;
}
